--- a/Design/index.html
+++ b/Design/index.html
@@ -12,6 +12,69 @@
 </head>
 
 <body>
+    <!-- firebase 콘솔 -->
+    <script type="module">
+        import firebaseConfig from './firebaseConfig.js';
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
+        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
+
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+
+        // 회원가입
+        document.getElementById('signupForm').addEventListener('submit', async function (event) {
+            event.preventDefault();
+            const email = document.getElementById('signUpEmail').value;
+            const password = document.getElementById('signUpPassword').value;
+            const passwordConfirm = document.getElementById('signUpCheckPassword').value;
+
+            if (password !== passwordConfirm) {
+                console.log("실패: 비밀번호가 일치하지 않습니다.");
+                alert('비밀번호가 일치하지 않습니다.');
+                return;
+            }
+
+            try {
+                const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+                console.log("성공: 회원가입 성공", userCredential);
+                alert('회원가입 성공! 유저 ID: ' + userCredential.user.uid);
+                closeModal('signupModal');
+            } catch (error) {
+                console.log("실패: 회원가입 에러", error);
+                alert('회원가입 실패: ' + error.message);
+            }
+        });
+
+        // 로그인
+        const loginForm = document.getElementById('loginForm');
+        loginForm.addEventListener('submit', async function (event) {
+            event.preventDefault();
+            const email = document.getElementById('signInEmail').value;
+            const password = document.getElementById('signInPassword').value;
+
+            try {
+                const userCredential = await signInWithEmailAndPassword(auth, email, password);
+                console.log("성공: 로그인 성공", userCredential);
+                closeModal('loginModal');
+            } catch (error) {
+                console.log("실패: 로그인 에러", error);
+                const loginError = document.getElementById('loginError');
+                document.getElementById('loginError').style.display = 'block'; // 로그인 실패 메시지 표시
+
+                loginError.style.display = 'block';
+            }
+        });
+
+        function validateLoginButton() {
+            const email = document.getElementById('signInEmail').value;
+            const password = document.getElementById('signInPassword').value;
+            const signInButton = document.getElementById('signInButton');
+            signInButton.disabled = !(email && password);
+        }
+
+        document.getElementById('signInEmail').addEventListener('input', validateLoginButton);
+        document.getElementById('signInPassword').addEventListener('input', validateLoginButton);
+    </script>
     <header>
         <nav class="navbar navbar-expand-md bg-body-tertiary">
             <div class="container-fluid">
@@ -36,7 +99,7 @@
                             <a class="nav-link" aria-current="page" href="#loginModal" id="loginBtn">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#registerModal" id="registerBtn">Register</a>
+                            <a class="nav-link" aria-current="page" href="#registerModal" id="signupBtn">Register</a>
                         </li>
                     </ul>
                 </div>
@@ -46,11 +109,9 @@
             <span class="bar-ing"></span>
         </div>
     </header>
-
-    <div>
-        승훈님!!여기에요!!!
-    </div>
-    
+    <form>
+        <button type="button" class="submit" id = "test">멤버 추가</button>
+    </form>
     <div id="member" class="wrapper">
         <ul class="team">
             <li class="team-item">
@@ -106,15 +167,16 @@
         </ul>
     </div>
     <!-- 회원가입 모달 -->
-    <div id="registerModal" class="modal">
+    <div id="signupModal" class="modal">
         <div class="modal-content">
             <form class="register">
                 <h1>회원가입</h1>
                 <div class="input-container"> <input type="email" id="signUpEmail" placeholder="Email" /></div>
                 <div class="input-container"><input type="password" id="signUpPassword" placeholder="Password" /></div>
-                <div class="input-container"><input type="password" id="signUpCheckPassword" placeholder="One more password" /></div>
-                <button type="submit" id="registerButton">회원가입 하기</button>
-                <button type="button" class="modal-button" onclick="closeModal('registerModal')">취소</button>
+                <div class="input-container"><input type="password" id="signUpCheckPassword"
+                        placeholder="One more password" /></div>
+                <button type="submit" id="signUpButton">회원가입 하기</button>
+                <button type="button" class="modal-button" onclick="closeModal('signupModal')">취소</button>
             </form>
         </div>
     </div>
@@ -125,9 +187,44 @@
             <form>
                 <h1>로그인</h1>
                 <div class="input-container"><input type="email" id="signInEmail" placeholder="Email" /></div>
-                <div class="input-container"><input type="password" id="signInPassword"  placeholder="Password"/></div>
-                <button type="submit" id="loginButton">로그인 하기</button>
+                <div class="input-container"><input type="password" id="signInPassword" placeholder="Password" /></div>
+                <button type="submit" id="signInButton">로그인 하기</button>
                 <button type="button" class="modal-button" onclick="closeModal('loginModal')">취소</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- 멤버추가 모달 -->
+    <div id="memberaddModal" class="modal">
+        <div class="modal-content">
+            <form class = "memberAdd">
+                <h1>멤버추가</h1>
+                <div class="row">
+                    <span class="title_content">이미지 url</span>
+                    <input class="txtfield" type="url" id="signInEmail"/>
+                </div>
+                <div class="row">
+                    <span class="title_content">이름</span>
+                    <input class="txtfield" type="text" id="signInPassword"/>
+                </div>
+                <div class="row">
+                    <span class="title_content">mbti</span>
+                    <input class="txtfield" type="text" id="signInPassword"/>
+                </div>
+                <div class="row">
+                    <span class="title_content">블로그 주소</span>
+                    <input class="txtfield" type="text" id="signInPassword"/>
+                </div>
+                <div class="row">
+                    <span class="title_content big">자신의 장점</span>
+                    <input class="txtfield big" type="text" id="signInPassword"/>
+                </div>
+                <div class="row">
+                    <span class="title_content big">자신의 협업스타일</span>
+                    <input class="txtfield big" type="text" id="signInPassword"/>
+                </div>
+                <button type="submit" id="memberAddButton">등록하기</button>
+                <button type="button" class="modal-button" onclick="closeModal('memberaddModal')">취소</button>
             </form>
         </div>
     </div>
@@ -147,23 +244,46 @@
             },
             false
         );
-        // 모달 열기
+        const signUpPassword = document.getElementById('signUpPassword');
+        const signUpCheckPassword = document.getElementById('signUpCheckPassword');
+        const signUpButton = document.getElementById('signUpButton');
+
+        function validatePasswords() {
+            if (signUpPassword.value === signUpCheckPassword.value && signUpPassword.value !== '') {
+                signUpButton.disabled = false;
+                signUpButton.classList.remove('disabled');
+                console.log("성공");
+
+            } else {
+                signUpButton.disabled = true;
+                signUpButton.classList.add('disabled');
+                console.log("실패");
+
+            }
+        }
+
+        signUpPassword.addEventListener('input', validatePasswords);
+        signUpCheckPassword.addEventListener('input', validatePasswords);
+
         function openModal(modalId) {
             document.getElementById(modalId).style.display = 'block';
         }
 
-        // 모달 닫기
         function closeModal(modalId) {
             document.getElementById(modalId).style.display = 'none';
         }
 
-        // 이벤트 리스너
-        document.getElementById('registerBtn').addEventListener('click', function () {
-            openModal('registerModal');
+        document.getElementById('signupBtn').addEventListener('click', function () {
+            openModal('signupModal');
         });
         document.getElementById('loginBtn').addEventListener('click', function () {
             openModal('loginModal');
         });
+
+        document.getElementById('test').addEventListener('click', function () {
+            openModal('memberaddModal');
+        });
+
     </script>
 </body>
 
