--- a/mainPage.html
+++ b/mainPage.html
@@ -139,9 +139,10 @@
         <div class="modal-content">
             <form id="signupForm">
                 <h1>자기소개페이지</h1>
-                <div>email: <input type="email" id="signUpEmail" /></div>
-                <div>Password: <input type="password" id="signUpPassword" required></div>
-                <div>재확인: <input type="password" id="signUpCheckPassword" required></div>
+                <div><img class="profile-picture" src="Design/images/green.png"alt="프로필 사진" /></div>
+                <div>이름 : <input type="email" id="signUpEmail" /></div>
+                <div>MBTI : <input type="password" id="signUpPassword" required></div>
+                <div>블로그 주소 : <input type="password" id="signUpCheckPassword" required></div>
                 <button type="submit" id="signUpButton" class="disabled" disabled>회원가입 하기</button>
                 <button type="button" class="modal-button" onclick="closeModal('detailModal')">취소</button>
             </form>
