--- a/Design/index.html
+++ b/Design/index.html
@@ -109,8 +109,8 @@
             <span class="bar-ing"></span>
         </div>
     </header>
-    <form>
-        <button type="button" class="submit" id = "test">멤버 추가</button>
+    <form id ="team">
+        <button type="button" class="submit" id = "test">팀원 추가</button>
     </form>
     <div id="member" class="wrapper">
         <ul class="team">
@@ -199,7 +199,7 @@
         <div class="modal-content">
             <form class = "memberAdd">
                 <div class="modal-header">
-                    <h1>멤버추가</h1>
+                    <h1>팀원 추가</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="closeModal('memberaddModal')"></button>
                 </div>
                 <div class="row">
