--- a/mainPage.html
+++ b/mainPage.html
@@ -42,8 +42,8 @@
         /* 자기소개페이지 모달버튼 */
         .modal-button-detail {
             cursor: pointer;
-            padding: 10px;
-            margin: 10px 15px;
+            padding: 12px 12px;
+            margin: 12px 12px;
             border-radius: 100%;
             background-color: #f1f1f1;
             border: none;
@@ -148,7 +148,7 @@
     <div id="detailModal" class="modal">
         <div class="modal-content">
                 <h1>자기소개페이지
-                    <div style="text-align:right">
+                    <div style="text-align:right; height:15px;">
                         <button type="button" class="modal-button-detail">수정</button>
                         <button type="button" class="modal-button-detail">삭제</button>
                     </div>
