--- a/mainPage.html
+++ b/mainPage.html
@@ -148,7 +148,7 @@
     <div id="detailModal" class="modal">
         <div class="modal-content">
                 <h1>자기소개페이지
-                    <div style="text-align:right; height:15px;">
+                    <div style="text-align:right;">
                         <button type="button" class="modal-button-detail">수정</button>
                         <button type="button" class="modal-button-detail">삭제</button>
                     </div>
@@ -157,7 +157,7 @@
             <div style="display:inline-block; vertical-align:top;">
                 <img class="profile-picture" src="Design/images/green.png"alt="프로필 사진" width="150px" height="230px"/>
             </div>
-            <div style = "display:inline-block"> 
+            <div style = "display:inline-block; margin:20px"> 
                 <div>이름 : </div>
                 <br>
                 <div>MBTI : </div>
