--- a/Design/index.html
+++ b/Design/index.html
@@ -17,10 +17,44 @@
         import firebaseConfig from '../firebaseConfig.js';
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
         import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
+        import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
+        const db = getFirestore(app);
 
+        // 팀원 데이터를 Firestore에 추가하는 함수
+        async function addTeamMember() {
+            if (auth.currentUser) { // 사용자 로그인 상태 확인
+                const memberData = {
+                    blog: document.getElementById('blogaddress').value,
+                    collaboration: document.getElementById('Collaboration').value,
+                    image: document.getElementById('imgurl').value,
+                    mbti: document.getElementById('mbti').value,
+                    name: document.getElementById('name').value,
+                    strengths: document.getElementById('strengths').value
+                };
+
+                try {
+                    await setDoc(doc(db, "member", auth.currentUser.email), {
+                        [memberData.name]: memberData // 이름을 키로 사용하여 멤버 데이터 저장
+                    }, { merge: true });
+                    alert('팀원이 성공적으로 추가되었습니다.');
+                    closeModal('memberaddModal');
+                } catch (error) {
+                    console.error("팀원 추가 실패: ", error);
+                    alert('팀원 추가 실패: ' + error.message);
+                }
+            } else {
+                alert('로그인이 필요합니다.');
+            }
+        }
+
+        // 팀원 추가 폼 제출 이벤트 리스너
+        document.querySelector('.memberAdd').addEventListener('submit', function (event) {
+            event.preventDefault(); // 폼 기본 제출 방지
+            addTeamMember();
+        });
         // 회원가입
         document.getElementById('signupForm').addEventListener('submit', async function (event) {
             event.preventDefault();
@@ -107,7 +141,7 @@
                 console.log("실패: 로그인 에러", error);
                 document.getElementById('loginError').textContent = '잘못된 이메일 또는 비밀번호입니다'
                 document.getElementById('loginError').style.display = 'block'; // 로그인 실패 메시지 표시
-                   
+
             }
         });
 
