design : Card Line sorting

--- a/Design/index.html
+++ b/Design/index.html
@@ -9,6 +9,27 @@
 
     <title>14조</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .wrapper {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            align-items: center;
+            margin-right: 30px;
+            margin-left: 30px;
+        }
+
+        .team-item {
+            flex: 0 0 calc(20% - 60px);
+            margin: 8px 30px;
+            max-width: calc(20% - 60px);
+            box-sizing: border-box;
+        }
+
+        .membtn-container {
+            margin-bottom: 30px;
+        }
+    </style>
 </head>
 
 <body>
@@ -46,7 +67,6 @@
         document.addEventListener('DOMContentLoaded', () => {
             listenToTeamMembers();
         });
-
 
         function updateTeamMemberUI(members) {
             const teamContainer = document.getElementById('member');
@@ -272,7 +292,7 @@
         <button type="button" id="memberAddBtn">팀원 추가</button>
     </div>
     <div id="member" class="wrapper">
-   </ul>
+        </ul>
     </div>
 
     <!-- 회원가입 모달 -->
@@ -424,7 +444,7 @@
                 card.addEventListener('click', () => {
                     // 카드에서 팀원의 이름을 추출
                     const name = card.querySelector('h2').textContent;
-                    alert('클릭한 팀원: ' + name);
+                    alert('클릭한 팀원: ' + member.name);
                 });
             });
         });
