--- a/Design/index.html
+++ b/Design/index.html
@@ -19,12 +19,12 @@
             margin-left: 30px;
         }
 
-        .team-item {
+        /* .team-item {
             flex: 0 0 calc(20% - 60px);
             margin: 8px 30px;
             max-width: calc(20% - 60px);
             box-sizing: border-box;
-        }
+        } */
 
         .membtn-container {
             margin-bottom: 30px;
