--- a/Design/index.html
+++ b/Design/index.html
@@ -11,14 +11,11 @@
     <link rel="stylesheet" href="style.css">
     <style>
         .wrapper {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-            align-items: center;
-            margin-right: 30px;
-            margin-left: 30px;
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 10px;
+            margin: 30px;
         }
-
 
         .membtn-container {
             margin-bottom: 30px;
