--- a/Design/index.html
+++ b/Design/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>14조</title>
     <link rel="stylesheet" href="style.css">
-  
+
 </head>
 
 <body>
@@ -26,6 +26,45 @@
         const auth = getAuth(app);
         const db = getFirestore(app);
 
+        $("#detailBtn").click(async function () {
+            const membersCol = collection(db, "member");
+            onSnapshot(membersCol, (snapshot) => {
+                const memberList = [];
+                snapshot.docs.forEach((doc) => {
+                    const data = doc.data();
+                    for (const key in data) {
+                        if (data.hasOwnProperty(key)) {
+                            memberList.push(data[key]);
+
+                        }
+                    }
+                });
+                const filteredData = memberList.filter(item => item.name === '김세림'); //여기에 누른 카드의 이름값 넣어야함
+
+                // 필터링된 요소들의 value 값을 변수에 할당
+                let name, mbti, strengths, collaboration, image, blog;
+
+                filteredData.forEach(item => {
+                    name = item.name;
+                    mbti = item.mbti;
+                    strengths = item.strengths;
+                    collaboration = item.collaboration;
+                    image = item.image;
+                    blog = item.blog;
+                });
+
+                document.getElementById('nameDetail').innerHTML = name;
+                document.getElementById('mbtiDetail').innerHTML = mbti;
+                document.getElementById('blogDetail').innerHTML = blog;
+                document.getElementById('strengthsDetail').innerHTML = strengths;
+                document.getElementById('collaborationDetail').innerHTML = collaboration;
+                detail_img.innerHTML = ``;
+                let temp_html = `<img class="profile-picture" src="${image}" alt="프로필 사진">`;
+
+                detail_img.innerHTML += temp_html;
+
+            });
+        });
         // 실시간으로 팀원 데이터를 로드
         function listenToTeamMembers() {
             const membersCol = collection(db, "member");
@@ -270,7 +309,8 @@
     <hr>
     <div class="membtn-container">
         <button type="button" id="memberAddBtn">팀원 추가</button>
-        <button type="button" id="detailBtn">팀원 추가</button>
+        <button type="button" id="detailBtn">팀원 자세히</button>
+
     </div>
     <div id="member" class="wrapper">
         </ul>
@@ -348,7 +388,7 @@
 
     <!-- 자기소개페이지 모달 -->
     <div id="detailModal" class="modal">
-        <div class="modal-content">
+        <div class="modal-content-detail">
             <div class="modal-header">
                 <h2>팀원소개페이지</h2>
                 <div>
@@ -359,31 +399,31 @@
                 </div>
             </div>
             <div>
-                <div style="display:inline-block; vertical-align:top; margin-top: 30px;">
-                    <img class="profile-picture" src="./images/green.png" alt="프로필 사진" width="150px" height="230px" />
+                <div id="detail_img">
+
                 </div>
                 <div style="display:inline-block; margin:20px">
                     <div class="row">
                         <span class="title_content">이름</span>
-                        <span class="title_content_answer" id="name">aaa</span>
+                        <span class="title_content_answer" id="nameDetail">aaa</span>
                     </div>
                     <div class="row">
                         <span class="title_content">mbti</span>
-                        <span class="title_content_answer" id="mbti">cute</span>
+                        <span class="title_content_answer" id="mbtiDetail">cute</span>
                     </div>
                     <div class="row">
                         <span class="title_content">블로그 주소</span>
-                        <span class="title_content_answer" id="blog">ttt</span>
+                        <span class="title_content_answer" id="blogDetail">ttt </span>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <span class="title_content">자신의 장점</span>
-                <span class="title_content_answer" id="strengths">good</span>
+                <span class="title_content_answer" id="strengthsDetail">good</span>
             </div>
             <div class="row">
                 <span class="title_content">자신의 <br> 협업스타일</span>
-                <span class="title_content_answer" id="collaboration">good</span>
+                <span class="title_content_answer" id="collaborationDetail">good</span>
             </div>
             <div style="text-align:center">
                 <button type="button" class="modal-button" onclick="closeModal('detailModal')">닫기</button>
@@ -456,7 +496,7 @@
         document.getElementById('memberAddBtn').addEventListener('click', function () {
             openModal('memberaddModal');
         });
-        
+
         document.getElementById('detailBtn').addEventListener('click', function () {
             openModal('detailModal');
         });
